syntax = "proto3";

package portal;
option go_package = "./portal";

message PortalRequest {
  string name = 1;
}

message PortalResponse {
  string response = 1;
}

service Portal {
  rpc Portal(PortalRequest) returns(PortalResponse);
}
